--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
+    "sourceMap": true,
     "outDir": "dist",
     "rootDir": "src",
     "resolveJsonModule": true,
